@@ -43,7 +43,8 @@ namespace video
 		virtual ~CNullDriver();
 
 		virtual bool beginScene(bool backBuffer=true, bool zBuffer=true,
-				SColor color=SColor(255,0,0,0), void* windowId=0,
+				SColor color=SColor(255,0,0,0),
+				const SExposedVideoData& videoData=SExposedVideoData(),
 				core::rect<s32>* sourceRect=0);
 
 		virtual bool endScene();
